# pk-services

./: MANIFEST.in  Pipfile.build  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
pk_services/: version.py  web.py  youtube.py
src/pk_services/: __init__.py  core.py  exceptions.py  lastfm.py  parsers.py  players.py  version.py  web.py  youtube.py
tests/: test_pk_services.py
