[metadata]
name = pk-services
description = Various services for python projects
long_description = file: README.md
# license = file: LICENSE
url = https://github.com/tulare/pk-services
author = Tulare Regnus
author_email = tulare.paxgalactica@gmail.com

[bdist_wheel]
universal = True

[options]
install_requires =
	PySocks>=1.7.1
	lxml>=4.9.3
	yt-dlp>=2023.7.6
zip_safe = False
include_package_data = True
packages = find:
test_suite = nose.collector
tests_require = 
	nose

[options.packages.find]
where = src

[options.package_data]
	
[options.data_files]